show current selected color

--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,15 @@ fieldset {
     border-radius: var(--border-radius);
     border: var(--thin-border);
 }
+
+.current-color {
+    border-radius: var(--border-radius);
+    height: var(--size30px);
+    border: var(--thin-border);
+}
+
+.color-palette {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
