--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@ body {
     width: 100%;
     height: 100%;
     user-select: none;
-    border: 1px solid rgb(177, 177, 177);
 }
 
 .palette {
@@ -65,6 +64,9 @@ fieldset {
     border-radius: var(--border-radius);
     height: var(--size30px);
     border: var(--thin-border);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .color-palette {
